초대 요청/공지 기능 구현